# ai_test

./: .gitignore  CONTRIBUTING.md  CURRICULUM.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: BACKEND_DOCUMENTATION.md  BATCH_DOCUMENTATION.md  app.py  eval_data.jsonl  pyproject.toml  run_openai_eval.py  sample_batch.jsonl  tools.py
backend/custom_tools/: current_weather.py
backend/evaluations/: eval_result.py  run_openai_eval.py
backend/memories/: open_ai_memories.py
backend/models/: chat_models.py  tools_models.py
backend/routes/: batch_routes.py  chat_routes.py
backend/services/: gemini_ai_service.py  ollama_ai_service.py  open_ai_service.py
backend/tests/: test_week_01.py  test_week_02.py  test_week_03.py  test_week_05.py  test_week_06.py  test_week_07.py
frontend/: ai_frontend_app.tsx  dashboard.html  index.html
frontend/my-project/: package-lock.json
frontend/my-project/src/: App.tsx
